feature(SPMORANGLE-52, 53, 54) (#26)